@@ -1,5 +1,10 @@
 2009-10-06  Ivan Maidanski <ivmai@mail.ru>
 
+	* alloc.c (GC_try_to_collect_general): Change the type of "result"
+	local variable to GC_bool.
+
+2009-10-06  Ivan Maidanski <ivmai@mail.ru>
+
 	* include/gc_config_macros.h: Use old behavior for FreeBSD and
 	NetBSD platform detection code (check that other GC_xxx_THREADS
 	are undefined); add FIXME.
